exception being thrown from the config being null for some reason!?

--- a/Randtech.RS232FileTransfer/Common/Common.csproj
+++ b/Randtech.RS232FileTransfer/Common/Common.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Content Include="ExampleFiles\FileTransferReceive.txt" />
     <Content Include="ExampleFiles\FileTransferSend.txt" />
+    <None Include="ExampleFiles\datafile.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
