--- a/Randtech.RS232FileTransfer/Upload/Upload.csproj
+++ b/Randtech.RS232FileTransfer/Upload/Upload.csproj
@@ -4,6 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Randtech.RS232FileTransfer.Upload</RootNamespace>
+    <Version>1.0.1</Version>
+    <Authors>Chris Randle</Authors>
+    <Company>Randtech Solutions</Company>
+    <Product>RS232 FTP - Upload Client</Product>
   </PropertyGroup>
 
   <ItemGroup>
